--- a/scss/utilities/_helpers.scss
+++ b/scss/utilities/_helpers.scss
@@ -11,3 +11,7 @@
 .clearfix:after {
   clear: both;
 }
+
+.mt-small {
+  margin-top: 5rem;
+}
